--- a/css/componets/brands.css
+++ b/css/componets/brands.css
@@ -1,14 +1,37 @@
 .brands {
     width: 100%;
-    margin-top: 140px;
+    margin-top: 141px;
     padding: 0 120px;
 }
 .brands__container {
+    max-width: 1200px;
     display: flex;
+    flex-wrap: wrap;
+    margin: auto;
     align-items: center;
     justify-content: space-between;
     padding: 0 85px 0 78px;
+    gap: 50px 0;
+    height: auto;
 }
 .brand-svg{
     margin-left: 34px;
+    min-width: 130px;
+}
+
+@media (max-width:780px) {
+    .brands{
+        width: 100%;
+        padding: 0 15px;
+    }
+    .brands__container{
+        width: 100%;
+        padding: 0;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .brand-svg {
+        margin-left: 0;
+        width: 100%;
+    }
 }
