--- a/css/componets/header.css
+++ b/css/componets/header.css
@@ -2,6 +2,7 @@ header {
     width: 100%;
     height: 106px;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
@@ -42,8 +43,11 @@ header {
     font-weight: 400;
     line-height: 30px;
 }
+.menu__item a{
+    color: #292F36;
+}
 
-.menu__item:first-child {
+.menu__item:first-child a{
     color: #CDA274;
 }
 
