--- a/css/componets/main-section.css
+++ b/css/componets/main-section.css
@@ -1,6 +1,5 @@
-.main {
+#main {
     width: 100%;
-    height: 831px;
     color: #292F36;
 }
 
@@ -34,8 +33,33 @@
     letter-spacing: 0.22px
 }
 
-.button__main {
-margin-top: 35px;
+.main-btn, .contact__btn{
+    margin-top: 35px;
+    display: flex;
+    align-items: center;
+    background: #292F36;
+    border: 2px solid #292F36;
+    border-radius: 18px;
+    font-family: 'Jost';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    letter-spacing: 0.72px;
+    color: #FFFFFF;
+    padding: 14px 20px 14px 32px;
+    transition: all ease-in-out 0.2s;
+    cursor: pointer;
+}
+
+.main-btn:hover {
+    background: #FFFFFF;
+    border: 2px solid #CDA274;
+    color:#CDA274;
+}
+
+.main-btn__arrow {
+    margin-left: 34px;
+    margin-right: -14px;
 }
 
 @media (max-width:740px) {
@@ -43,29 +67,34 @@ margin-top: 35px;
         padding: 110px 0 290px 80px;
     }
 }
+
 @media (max-width:524px) {
-    .main__title{
+    .main__container {
+        padding: 80px 25px;
+    }
+    .main__title {
         font-size: 58px;
         line-height: 64px;
     }
+
     .main__description {
         font-size: 20px;
         line-height: 25px;
     }
 }
+
 @media (max-width:350px) {
     .main__container {
-        padding: 100px 0 60px 44px;
+        padding: 50px 15px;
     }
-    .main__title{
+
+    .main__title {
         font-size: 50px;
         line-height: 46px;
     }
+
     .main__description {
         font-size: 20px;
         line-height: 25px;
-    }
-    .button__main{
-        width: 60%;
     }
 }
