--- a/css/componets/statisctic.css
+++ b/css/componets/statisctic.css
@@ -1,12 +1,14 @@
 .statistic {
     width: 100%;
     background: #F4F0EC;
-    margin-top: 98px;
+    margin-top: 80px;
 }
 
 .container__statistic {
     max-width: 1200px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: auto;
     align-items: center;
     text-align: center;
@@ -44,4 +46,24 @@
     line-height: 33px;
     letter-spacing: 0.22px;
     color: #4D5053;
+}
+@media (max-width: 1152px) {
+    .container__statistic{
+        width: 70%;
+        justify-content: space-between;
+        gap: 50px;
+    }
+    .statistic__item{
+        width: calc(50% - 25px);
+        border-right: 0px;
+        align-items: center;
+    }
+}
+@media (max-width: 621px) {
+    .container__statistic{
+        flex-direction: column;   
+    }
+    .statistic__item{
+        width: 100%;
+    }
 }
