--- a/css/index.css
+++ b/css/index.css
@@ -15,4 +15,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Jost;
+    text-decoration: none;
+    border: none;
+    scroll-behavior: smooth;
 }
