--- a/css/componets/join.css
+++ b/css/componets/join.css
@@ -50,6 +50,17 @@
 
 @media (max-width:960px) {
     .join-us {
-        padding: 86px 25px 80px;
+        padding: 46px 25px 80px;
+    }
+    .join-us__container{
+        width: 100%;
+    }
+    .join__title{
+        padding: 80px 0 40px;
+        font-size: 42px;
+        line-height: 45px;
+    }
+    .join__btn{
+        width: 100%;
     }
 }
