--- a/css/componets/acticle-section.css
+++ b/css/componets/acticle-section.css
@@ -1,6 +1,6 @@
 .article {
     width: 100%;
-    padding: 100px 120px;
+    padding: 130px 120px;
 }
 
 .article__container {
@@ -45,7 +45,17 @@
     letter-spacing: 0.36px;
     color: #4D5053;
     background: none;
+    transition: .3s;
+    cursor: pointer;
 }
+.article-btn:hover{
+    transform: scale(1.1);
+    color: #CDA274;
+}
+.article-btn:active {
+    color: red;
+}
+
 
 @media (max-width: 1200px) {
     .article {
@@ -59,16 +69,10 @@
     }
 }
 @media (max-width:750px) {
-    .arcticle-card {
-        padding: 15px;
-    }
-}
-
-@media (max-width:650px) {
     .article__container {
-    flex-wrap: wrap;
-    justify-content: center;
-    }
+        flex-wrap: wrap;
+        justify-content: center;
+        }
     .arcticle-card {
         width: 100%;
     }
