--- a/css/componets/brands.css
+++ b/css/componets/brands.css
@@ -1,6 +1,6 @@
 .brands {
     width: 100%;
-    margin-top: 141px;
+    margin-top: 143px;
     padding: 0 120px;
 }
 .brands__container {
@@ -22,13 +22,12 @@
 @media (max-width:780px) {
     .brands{
         width: 100%;
-        padding: 0 15px;
     }
     .brands__container{
         width: 100%;
         padding: 0;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
     .brand-svg {
         margin-left: 0;
