--- a/css/componets/projects.css
+++ b/css/componets/projects.css
@@ -38,7 +38,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 70px;
-    gap: 0 20px;
+    gap: 0px 20px;
 }
 
 .project__card:nth-child(3) {
@@ -110,7 +110,8 @@
         line-height: 30px
     }
     .card__btn{
-        width: 0%;
+        width: 90%;
+        margin-top: 10px;
     }
     .project__cards{
         margin: 0 auto;
