--- a/css/componets/header.css
+++ b/css/componets/header.css
@@ -66,6 +66,12 @@ header {
         display: block;
     }
 }
+@media (max-width: 700px) {
+    .header__container{
+        margin: 0 50px ;
+    }
+}
+
 @media (max-width: 500px) {
     .header__container{
         margin: 0 25px;
