--- a/css/componets/main-section.css
+++ b/css/componets/main-section.css
@@ -67,6 +67,7 @@
     margin-left: 34px;
     margin-right: -14px;
 }
+
 @media (max-width:668px) {
     .main {
         height: 100%;
@@ -74,8 +75,9 @@
         background-image: url(../../img/bg.png);
         background-repeat: no-repeat;
         background-size: cover;
-        padding: 140px 0 210px 20px;
+        padding: 140px 0 210px 50px;
     }
+
     .main_title {
         font-family: 'DM Serif Display';
         font-style: normal;
@@ -105,49 +107,32 @@
         background-image: url(../../img/bg.png);
         background-repeat: no-repeat;
         background-size: cover;
-        padding: 50px 15px 70px;
+        padding: 36px 15px 70px 25px;
     }
 
     .main_title {
-        font-family: 'DM Serif Display';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 25px;
-        line-height: 26px;
+        font-size: 35px;
+        width: 70%;
+        line-height: 30px;
         letter-spacing: 0.22px;
-        color: #292F36;
-        margin-bottom: 15px;
     }
 
     .main_descr {
-        font-family: 'Jost';
-        font-style: normal;
-        font-weight: 400;
+        width: 60%;
         font-size: 16px;
         line-height: 20px;
-        letter-spacing: 0.22px;
-        color: #4D5053;
     }
+
     .main-btn,
-.contact__btn {
-    margin-top: 35px;
-    display: flex;
-    align-items: center;
-    background: #292F36;
-    border: 2px solid #292F36;
-    border-radius: 18px;
-    font-family: 'Jost';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    letter-spacing: 0.72px;
-    color: #FFFFFF;
-    padding: 5px 10px;
-    transition: all ease-in-out 0.2s;
-    cursor: pointer;
-}
-.main-btn__arrow {
-    height: 4px;
-}
-    
+    .contact__btn {
+        margin-top: 20px;
+        font-size: 15px;
+        letter-spacing: 0.72px;
+        padding: 5px 10px;
+    }
+
+    .main-btn__arrow {
+        height: 4px;
+    }
+
 }
